--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <p>O primeiro passo, é preencher esse formulário de inscrição.</p>
     </header>
     <form>
-  
+      <fieldset>
+        <legend>Informaçôes do Evento</legend>
+      </fieldset>
     </form>
   </div>
 </body>
