--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <form>
       <fieldset>
         <legend>Informaçôes do Evento</legend>
+        <div class="input-wrapper">
+          <label for="event-title">Título do evento <span>(mínimo 8 caracteres)</span></label>
+          <input type="text" id="event-title"/>
+        </div>
       </fieldset>
     </form>
   </div>
