--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
             <textarea id="event-info"></textarea>
           </div>
         </div>
+        <div class="input-wrapper">
+          <label for="event-category">Categoria </label>
+          <select id="event-category">
+            <option value="live">Ao vivo</option>
+            <option value="podcast">Podcast</option>
+            <option value="mentorship">Metoria</option>
+          </select>
+        </div>
       </fieldset>
     </form>
   </div>
