--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
             </div>
           </div>
         </div>
-      </fieldset>  
+      </fieldset> 
     </form>
+    <footer>
+    <input class="button" type="submit" value="Salvar evento">
+    </footer> 
   </div>
 </body>
 </html>
