--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <h1>Crie e compartilhe seu evento.</h1>
       <p>O primeiro passo, é preencher esse formulário de inscrição.</p>
     </header>
-    <form>
+    <form id="my-form">
       <fieldset>
         <div class="fieldset-wrapper">
           <legend>Informaçôes do Evento</legend>
           <div class="input-wrapper">
             <label for="event-title">Título do evento <span>(mínimo 8 caracteres)</span></label>
-            <input type="text" id="event-title"/>
+            <input type="text" id="event-title" required minlength="8"/>
           </div>
           <div class="input-wrapper">
             <label for="event-link">Link do evento <span>(comece com https://)</span></label>
@@ -54,7 +54,7 @@
           </div>
           <div class="input-wrapper">
             <label for="event-password">Senha de acesso para os participantes <span>(mínimo 8 caracteres)</span></label>
-            <input type="password" id="event-password"/>
+            <input type="password" id="event-password" minlength="8"/>
           </div>
           <div class="checkbox-wrapper">
             <input type="checkbox" id="event-private"/>
@@ -83,7 +83,7 @@
       </fieldset> 
     </form>
     <footer>
-    <input class="button" type="submit" value="Salvar evento">
+    <button class="button" form="my-form">Salvar evento</button>
     </footer> 
   </div>
 </body>
